PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/Investment_Vehicle_Close_Date__c.object-meta.xml
<CustomObject>
    <description>BF-26: Investment Vehicle Close Dates</description>
    <label>Investment Vehicle Close Date</label>
    <nameField>
        <label>Close Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Vehicle Close Dates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>