PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Dates set as inactive will not appear in the fund close date search results</description>
    <inlineHelpText>Dates set as inactive will not appear in the fund close date search results</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>