PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/fields/Close_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Text__c</fullName>
    <description>BF-27: Close Date Text field to be used in Date Name</description>
    <formula>IF(
 NOT(ISBLANK( Close_Date__c )),
 CASE(MONTH(Close_Date__c),
      1, &#39;January&#39;,
      2, &#39;February&#39;,
      3, &#39;March&#39;,
      4, &#39;April&#39;,
      5, &#39;May&#39;,
      6, &#39;June&#39;,
      7, &#39;July&#39;,
      8, &#39;August&#39;,
      9, &#39;September&#39;,
      10, &#39;October&#39;,
      11, &#39;November&#39;,
      12, &#39;December&#39;,
      &#39;&#39;)
 &amp; &#39; &#39; &amp; TEXT(DAY(Close_Date__c))
 &amp; &#39; &#39; &amp; TEXT(YEAR(Close_Date__c)),
 NULL
)</formula>
    <inlineHelpText>Close Date Text field to be used in Date Name</inlineHelpText>
    <label>Close Date Text</label>
    <type>Text</type>
</CustomField>