PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/fields/Close_Type__c.field-meta.xml
<CustomField>
    <fullName>Close_Type__c</fullName>
    <description>BF-26: Close Type associated with this date</description>
    <inlineHelpText>Close Type associated with this date</inlineHelpText>
    <label>Close Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Subsequent</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>