PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/fields/Investment_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>BF-26: Related Investment Vehicle</description>
    <inlineHelpText>Related Investment Vehicle</inlineHelpText>
    <label>Investment Vehicle</label>
    <referenceTo>Investment_Vehicle__c</referenceTo>
    <relationshipLabel>Investment Vehicle Close Dates</relationshipLabel>
    <relationshipName>Investment_Vehicle_Close_Dates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>