PROD-9-26-19/force-app/main/default/objects/Investment_Vehicle_Close_Date__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <columns>Close_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>